--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,9 @@
   width: 100%;
 }
 
-/* ────────────── Sections ────────────── */
+/* ───────────────────────────────────────────
+   Sections
+──────────────────────────────────────────── */
 .section {
   width: 100%;
   min-height: 100vh;
@@ -19,10 +21,11 @@
   max-width: 1200px;
   width: 100%;
   text-align: center;
-  
 }
 
-/* ────────────── Home Section ────────────── */
+/* ───────────────────────────────────────────
+   Home Section
+──────────────────────────────────────────── */
 #home {
   color: #fff;
   padding-top: 150px;
@@ -32,21 +35,35 @@
   padding: 50px 0px;
 }
 
-
-/* ────────────── About Section ────────────── */
+/* ───────────────────────────────────────────
+   About Section
+──────────────────────────────────────────── */
 #about {
   background-color: var(--bg-2);
 }
 
-/* ────────────── Work Section ────────────── */
-.project-grid {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 30px;
+#about p {
+  margin: 50px 0;
 }
+
+/* ───────────────────────────────────────────
+   Work Section 
+──────────────────────────────────────────── */
+
+#work {
+  background-color: var(--bg);
+}
+
+/* ───────────────────────────────────────────
+   Contact Section
+──────────────────────────────────────────── */
+
+
+
 
 
 /* ────────────── Social Links ────────────── */
+
 .socialMedia-links {
   display: flex;
   justify-content: center;
