--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,3 @@
-.main-content {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 100%;
-
-}
 
 /* ───────────────────────────────────────────
    Sections
@@ -21,17 +14,71 @@
   max-width: 1200px;
   width: 100%;
   text-align: center;
+  
+}
+
+@keyframes slow-rotate {
+  from {
+    transform: translateX(-50%) rotate(0deg);
+  }
+  to {
+    transform: translateX(-50%) rotate(360deg);
+  }
+}
+
+.planet-container {
+  position: relative; 
+  width: 100%;
+  height: 50vh;
+  z-index: 1;
+  overflow: hidden;
+  margin-bottom: 50px;
+}
+
+
+.planet {
+  position: absolute;
+  bottom: 0;  
+  left: 50%;
+  transform: translateX(-50%);
+  width: 100%; 
+  height: auto;
+  animation: slow-rotate 300s linear infinite;
+  border-radius: 50%;
 }
 
 /* ───────────────────────────────────────────
    Home Section
 ──────────────────────────────────────────── */
 #home {
-  color: #fff;
+  position: relative;
+  width: 100%;
+  min-height: 100vh;
+  display: block;
+  background: transparent; 
+  overflow: hidden;
+  border: 1px solid red;
 }
 
 .mt-4 {
   padding-bottom: 20px;
+}
+
+.contact-btn {
+  border-radius: 20px;
+  padding: 10px 10px;
+  background: rgba(255, 255, 255, 0.05);
+  backdrop-filter: blur(12px);
+  border: 1px solid rgba(255, 255, 255, 0.15);
+  transition: transform .2s ease, box-shadow .3s ease, background .3s ease;
+}
+
+.contact-btn:hover {
+  transform: translateY(-6px) scale(1.05);
+  color: #f0f;
+  font-weight: bold;
+  box-shadow: 0 8px 25px rgba(255, 0, 255, 0.4);
+  background: rgba(255, 255, 255, 0.1);
 }
 
 /* ────────────── Glow Line ────────────── */
@@ -44,7 +91,8 @@
   height: 3px;
   background: linear-gradient(90deg, #0ff, #f0f);
   border-radius: 5px;
-  animation: beam-expand 3s forwards;
+  animation: beam-expand 2s forwards;
+  
 }
 
 @keyframes beam-expand {
@@ -66,8 +114,9 @@
   color: #0ff;
   font-size: 3rem;
   opacity: 0;
-  animation: fade-in 1.5s 0.7s forwards; /* delay for beam to start first */
+  animation: fade-in 1.5s 0.7s forwards;
   text-shadow: 0 0 5px #0ff, 0 0 10px #0ff, 0 0 20px #f0f;
+  
 }
 
 @keyframes fade-in {
