--- a/src/index.css
+++ b/src/index.css
@@ -5,13 +5,13 @@
 @custom-variant dark (&:is(.dark *));
 
 :root {
-  --bg: #000435;
+  --bg: #000000;
   --bg-2:  rgba(203, 220, 255, 0.25);
   --text: #fff;
   --muted: oklch(0.97 0 0);
   --gradient: linear-gradient(90deg, var(--brand), var(--brand-2));
-  --brand: rgba(0, 191,225);
-  --brand-2: rgba(225, 0, 225);
+  --brand: #f0f;
+  --brand-2: #0ff;
   --radius: 0.625rem;
   --background: oklch(1 0 0);
   --foreground: oklch(0.145 0 0);
@@ -52,14 +52,16 @@
 }
 
 html, body {
-  overflow-x: hidden;
   width: 100%;
+  scrollbar-width: thin;
+  scrollbar-color: var(--brand) var(--bg);
 }
 
 body {
-  background: #000000;
+  background: linear-gradient(#000, #a17fb3);
   font-family: 'Fira Code', monospace;
   color: white;
+
 }
 
 /* ────────────── Text Styles ────────────── */
@@ -106,16 +108,23 @@ h6 {
   color: var(--brand-2);
 }
 
-.name {
-  background: var(--gradient);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  background-clip: text; 
-  color: transparent; 
-  font-style: italic;
+/* ────────────── Scrollbar ────────────── */
+::-webkit-scrollbar {
+  width: 8px;
 }
 
-/* ────────────── Glow Line ────────────── */
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--brand);
+  border-radius: 25px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: var(--brand-2);
+}
 
 @theme inline {
   --radius-sm: calc(var(--radius) - 4px);
