changed project section from slider -> grid layout

--- a/src/App.css
+++ b/src/App.css
@@ -135,6 +135,10 @@
   margin: 50px 0;
 }
 
+#about {
+  border: 1px solid blue;
+}
+
 /* ───────────────────────────────────────────
    Work Section 
 ──────────────────────────────────────────── */
