--- a/src/style/Navbar.css
+++ b/src/style/Navbar.css
@@ -1,8 +1,7 @@
 /* ────────────── Navbar ────────────── */
-
 .navbar {
   position: sticky;
-  top: 20px; /* sticks when reaching top */
+  top: 20px;
   margin: 0 auto;
   display: flex;
   justify-content: center;
