--- a/src/style/Skills.css
+++ b/src/style/Skills.css
@@ -1,7 +1,7 @@
 .skills-section {
+  background-color: #fff;
   text-align: center;
   padding: 40px 20px;
-  background-color: rgb(250, 250, 250);
   color: var(--bg);
   border-radius: 25px;
 }
@@ -23,19 +23,69 @@
 }
 
 .skill-item {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
   gap: 0.5rem;
-  border-bottom: 2px solid var(--bg);
-  padding-bottom: 10px;
+  padding-bottom: 20px;
+  z-index: 0;
+}
+
+.skill-item::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 100%;
+  height: 3px;
+  background: linear-gradient(
+    to right,
+    rgba(255, 255, 255, 0),
+    rgba(240, 0, 255, 0.8),
+    rgba(255, 255, 255, 0)
+  );
+  box-shadow: 
+    0 0 10px rgba(240, 0, 255, 0.6),
+    0 0 20px rgba(240, 0, 255, 0.4);
+  border-radius: 2px;
+  z-index: -1;
+}
+
+.skill-item::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1; 
+  border-radius: 3px;
+  background: linear-gradient(
+    to top,
+    rgba(255, 0, 255, 0.8),
+    rgba(240, 0, 255, 0)
+  );
+  filter: blur(4px);
+  opacity: 0;
+  transition: opacity 0.8s ease;
+}
+
+.skill-item:hover::before {
+  opacity: 1;
+  transition: opacity 0.8s ease;
 }
 
 .skill-icon {
-  width: 40px;
-  height: 40px;
+  width: 50px;
+  height: 50px;
   object-fit: contain;
+}
+
+.skill-name {
+  color: #fff;
 }
 
 /* ───────────────────────────────────────────
