--- a/src/index.css
+++ b/src/index.css
@@ -65,6 +65,14 @@ body {
 
 }
 
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 16px;
+  margin-bottom: 10px;
+}
+
 /* ────────────── Text Styles ────────────── */
 h1 {
   color: #fff;
