--- a/src/style/ProjectPage.css
+++ b/src/style/ProjectPage.css
@@ -140,6 +140,17 @@
   height: 40px;
 }
 
+.project-language-icon {
+  font-size: 40px;
+  color: #000; 
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+  transition: transform 0.3s ease, color 0.3s ease;
+}
+
 .project-language:nth-child(1) { animation-delay: 0.3s; }
 .project-language:nth-child(2) { animation-delay: 0.5s; }
 
