--- a/src/style/Projects.css
+++ b/src/style/Projects.css
@@ -79,11 +79,22 @@
   align-items: center;
   gap: 20px;
   background-color: white;
-  border-radius: 25px;
+  border-radius: 1.5rem;
   padding: 5px;
   margin-top: 10px;
 }
 
 .projectCard-language {
   width: 20px;
+}
+
+.projectCard-skillIcon {
+  font-size: 1.5rem;
+  color: #000; 
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 1.5rem;
+  height: 1.5rem;
+  transition: color 0.5s ease;
 }
