--- a/src/style/Skills.css
+++ b/src/style/Skills.css
@@ -83,19 +83,27 @@
 }
 
 .skill-icon {
-  width: 50px;
-  height: 50px;
-  object-fit: contain;
+  font-size: 40px;
+  color: #000; 
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+  transition: color 0.5s ease;
+}
+
+.skill-item:hover .skill-icon{
+  color: #fff; 
 }
 
 .skill-item .skill-name {
-  color: #000;          /* hide text initially */
-  transition: color 0.5s ease; /* smooth fade-in */
+  color: #000; 
+  transition: color 0.5s ease;
 }
 
-/* On hover, show text */
 .skill-item:hover .skill-name {
-  color: white;                /* turn white on hover */
+  color: white;
 }
 
 
